fix buttons being clipped at iphone 5s size

--- a/src/styles/video/article-more.scss
+++ b/src/styles/video/article-more.scss
@@ -55,7 +55,7 @@
       flex-direction: column;
     }
 
-    @include media(xxxs) {
+    @include media(xxs) {
       flex-flow: column nowrap;
     }
 
@@ -66,7 +66,7 @@
         margin-top: 15px;
       }
 
-      @include media(xxxs) {
+      @include media(xxs) {
         margin-left: 0;
         margin-top: 15px;
       }
